[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/player.png" type="Texture" id=1]
[ext_resource path="res://player/player_default.gd" type="Script" id=2]
[ext_resource path="res://player/ExaustFumes.gd" type="Script" id=3]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://player/FlameAttack.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 41.6525
height = 159.106

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.7468, 13.1241 )

[node name="player" type="RigidBody2D"]
position = Vector2( 3.70957, 8.19412 )
script = ExtResource( 2 )
speed = 5
spin_thrust = 6
engine_thrust = 350

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.744884, -4.40173 )
rotation = 0.137857
scale = Vector2( 0.164863, 0.206937 )
frames = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0.114901, 0.279602 )
current = true

[node name="ExaustFumes" type="Area2D" parent="."]
space_override = 4
gravity_point = true
gravity = -312.0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExaustFumes"]
position = Vector2( -3.51481, 141.214 )
shape = SubResource( 2 )

[node name="BigMessagingSystem" type="RichTextLabel" parent="."]
margin_left = -510.0
margin_top = -298.0
margin_right = 510.0
margin_bottom = -213.0
custom_fonts/mono_font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -1.20957, -5.69412, -0.70957, -16.4441, -1.45957, -22.4441, -2.45957, -30.1941, -3.70957, -34.4441, -3.95957, -41.4441, -6.20957, -38.6941, -8.20957, -32.1941, -8.95957, 11.8059, -14.4596, 16.8059, -16.4596, 19.0559, -12.9596, 19.3059, 7.79043, 14.3059, 0.29043, 11.5559 )

[node name="FlameAttack" type="StaticBody2D" parent="."]
position = Vector2( -1.18921, 1.18921 )
collision_layer = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlameAttack"]
position = Vector2( -2.37024, 32.5062 )
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
